Thu Mar 12 22:14:01 2009  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/ossl_ssl.c (ossl_ssl_def_const): use INT2NUM because
	  OP_NETSCAPE_DEMO_CIPHER_CHANGE_BUG doesn't fit into Fixnum.

Thu Mar 12 05:22:50 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (copy_stream_fallback_body): off_t may be larger than long.

	* iseq.c (rb_iseq_disasm): RSTRING_LEN() returns long.

	* process.c (rb_f_sleep): time() needs time_t.

Thu Mar 12 05:12:53 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread_pthread.c (ruby_init_stack): range of rlim_cur may be
	  larger than int.

	* missing/vsnprintf.c (BSD_vfprintf): commented out code which has
	  no effect at all.

Wed Mar 11 20:13:38 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/handle.c (rb_dlhandle_sym): RTLD_NEXT is not for symbol
	  name.   [ruby-dev:38150]

Wed Mar 11 13:03:12 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/handle.c (rb_dlhandle_sym): fixed heap corruption.
	  [ruby-core:22822]

Tue Mar 10 13:45:54 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/Makefile.sub (LDFLAGS): moved -link to TRY_LINK, LINK_SO
	  and so on.  based on a patch by Charlie Savage at
	  [ruby-core:22794]

	* win32/Makefile.sub (config.h): passes LDFLAGS to rbconfig.rb so
	  that extconf.rb could refer it.  [ruby-core:22725]

Wed Mar  4 05:19:27 2009  James Edward Gray II  <jeg2@ruby-lang.org>

  * lib/csv.rb: Some minor documentation fixes from Gregory Brown.

Wed Mar  4 00:54:43 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* lib/prime.rb (Prime::prime?): used to return a wrong answer.
	  [ruby-core:22646].

	* test/test_prime.rb (test_prime?): test case for [ruby-core:22646].

Thu Mar  5 11:27:16 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/Makefile.sub (miniruby.exe): workaround for a failure of
	  mt.exe on Windows 7 beta.  [ruby-talk:330284]

Wed Mar  4 21:21:51 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* lib/thread.rb (SizedQueue#push): fix limit condition.
	  [ruby-dev:38135]
