@@ -1,3 +1,8 @@
+Fri Mar 13 08:06:48 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* util.c (rv_strdup): macro to duplicate nul-terminated string.
+	  [ruby-core:22852]
+
 Thu Mar 12 22:14:01 2009  Tanaka Akira  <akr@fsij.org>
 
 	* ext/openssl/ossl_ssl.c (ossl_ssl_def_const): use INT2NUM because
